--- a/sources/_VS/Device53/Device53.vcxproj
+++ b/sources/_VS/Device53/Device53.vcxproj
@@ -71,16 +71,16 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <OutDir>..\Debug\</OutDir>
-    <IncludePath>..\..\libs\STM32Cube_F2\Drivers\STM32F2xx_HAL_Driver\Inc;..\..\libs\STM32Cube_F2\Drivers\CMSIS\Include;..\..\libs\STM32Cube_F2\Drivers\CMSIS\Device\ST\STM32F2xx\Include;..\..\libs\STM32Cube_F2\Middlewares\Third_Party\LwIP\src\include;..\..\libs\STM32Cube_F2\Middlewares\Third_Party\LwIP\system;..\..\libs\STM32Cube_F2\Middlewares\Third_Party\FatFs\src\drivers;..\..\libs\common\_VS;..\..\Device53\src;..\..\Device53\src\libs;..\..\libs\common;..\..\libs\STM32Cube_F2\Middlewares\ST\STM32_USB_Device_Library\Core\Inc;..\..\libs\STM32Cube_F2\Middlewares\ST\STM32_USB_Host_Library\Class\MSC\Inc;..\..\libs\STM32Cube_F2\Middlewares\ST\STM32_USB_Host_Library\Core\Inc;..\..\libs\STM32Cube_F2\Middlewares\Third_Party\FatFs\src;..\..\libs\STM32Cube_F2\Middlewares\ST\STM32_USB_Device_Library\Class\CDC\Inc</IncludePath>
+    <IncludePath>..\..\Device53\src;..\..\Device53\src\libs\FatFS;..\..\Device53\src\libs\HAL;..\..\Device53\src\libs\LwIP;..\..\Device53\src\libs\USBD;..\..\Device53\src\libs\USBH;..\..\libs\common\S8-53;..\..\libs\common;..\..\libs\common\_VS;..\..\libs\STM32Cube_F2\Drivers\STM32F2xx_HAL_Driver\Inc;..\..\libs\STM32Cube_F2\Drivers\CMSIS\Include;..\..\libs\STM32Cube_F2\Drivers\CMSIS\Device\ST\STM32F2xx\Include;..\..\libs\STM32Cube_F2\Middlewares\Third_Party\LwIP\src\include;..\..\libs\STM32Cube_F2\Middlewares\Third_Party\LwIP\system;..\..\libs\STM32Cube_F2\Middlewares\Third_Party\FatFs\src\drivers;..\..\libs\STM32Cube_F2\Middlewares\ST\STM32_USB_Device_Library\Core\Inc;..\..\libs\STM32Cube_F2\Middlewares\ST\STM32_USB_Host_Library\Class\MSC\Inc;..\..\libs\STM32Cube_F2\Middlewares\ST\STM32_USB_Host_Library\Core\Inc;..\..\libs\STM32Cube_F2\Middlewares\Third_Party\FatFs\src;..\..\libs\STM32Cube_F2\Middlewares\ST\STM32_USB_Device_Library\Class\CDC\Inc</IncludePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
-      <WarningLevel>Level4</WarningLevel>
+      <WarningLevel>EnableAllWarnings</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>USE_HAL_DRIVER;STM32F207xx;WIN32;S8_53;USBD_LPM_ENABLED=0;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>USE_HAL_DRIVER;STM32F207xx;S8_53;USBD_LPM_ENABLED=0;MSVC</PreprocessorDefinitions>
       <MinimalRebuild>false</MinimalRebuild>
-      <DisableSpecificWarnings>4068;4514;4365;4820</DisableSpecificWarnings>
+      <DisableSpecificWarnings>4068;4131;4201;4310;4514;4365;4548;4774;4820;5039</DisableSpecificWarnings>
       <AdditionalOptions>-MP %(AdditionalOptions)</AdditionalOptions>
     </ClCompile>
     <Link>
@@ -125,8 +125,20 @@
     <ClCompile Include="..\..\Device53\src\Hardware\CPU.cpp" />
     <ClCompile Include="..\..\Device53\src\Hardware\CPU_It.cpp" />
     <ClCompile Include="..\..\Device53\src\Hardware\CPU_Rtc.cpp" />
+    <ClCompile Include="..\..\Device53\src\Hardware\Panel.cpp" />
+    <ClCompile Include="..\..\Device53\src\Hardware\PanelFunctions.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="..\..\Device53\src\Hardware\VCP.cpp" />
+    <ClCompile Include="..\..\Device53\src\libs\CMSIS\system_stm32f2xx.c" />
+    <ClCompile Include="..\..\Device53\src\libs\HAL\stm32f2xx_hal_msp.cpp" />
+    <ClCompile Include="..\..\Device53\src\libs\LwIP\app_ethernet.cpp" />
+    <ClCompile Include="..\..\Device53\src\libs\LwIP\ethernetif.cpp" />
+    <ClCompile Include="..\..\Device53\src\libs\USBD\usbd_cdc_interface.cpp" />
+    <ClCompile Include="..\..\Device53\src\libs\USBD\usbd_conf.cpp" />
+    <ClCompile Include="..\..\Device53\src\libs\USBD\usbd_desc.cpp" />
+    <ClCompile Include="..\..\Device53\src\libs\USBH\usbh_conf.cpp" />
     <ClCompile Include="..\..\Device53\src\Utils\Dictionary.cpp" />
-    <ClCompile Include="..\..\libs\common\commonDefines.cpp" />
     <ClCompile Include="..\..\libs\common\Display\Colors.cpp" />
     <ClCompile Include="..\..\libs\common\Display\DisplayPrimitives.cpp" />
     <ClCompile Include="..\..\libs\common\Display\Grid.cpp" />
@@ -146,6 +158,13 @@
     <ClCompile Include="..\..\libs\common\Menu\MenuItemsLogic.cpp" />
     <ClCompile Include="..\..\libs\common\Menu\Pages\Definition.cpp" />
     <ClCompile Include="..\..\libs\common\S8-53\Hardware\Controls.cpp" />
+    <ClCompile Include="..\..\libs\common\SCPI\channelSCPI.cpp" />
+    <ClCompile Include="..\..\libs\common\SCPI\commonSCPI.cpp" />
+    <ClCompile Include="..\..\libs\common\SCPI\controlSCPI.cpp" />
+    <ClCompile Include="..\..\libs\common\SCPI\displaySCPI.cpp" />
+    <ClCompile Include="..\..\libs\common\SCPI\SCPI.cpp" />
+    <ClCompile Include="..\..\libs\common\SCPI\tbaseSCPI.cpp" />
+    <ClCompile Include="..\..\libs\common\SCPI\trigSCPI.cpp" />
     <ClCompile Include="..\..\libs\common\Utils\CommonFunctions.cpp" />
     <ClCompile Include="..\..\libs\common\Utils\Map.cpp" />
     <ClCompile Include="..\..\libs\common\Utils\Math.cpp" />
@@ -167,20 +186,6 @@
     <ClCompile Include="..\..\Device53\src\Hardware\FSMC.cpp" />
     <ClCompile Include="..\..\Device53\src\Hardware\Hardware.cpp" />
     <ClCompile Include="..\..\Device53\src\Hardware\MSP_USBH.cpp" />
-    <ClCompile Include="..\..\Device53\src\libs\app_ethernet.cpp" />
-    <ClCompile Include="..\..\Device53\src\libs\ethernetif.cpp">
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
-    </ClCompile>
-    <ClCompile Include="..\..\Device53\src\libs\stm32f2xx_hal_msp.cpp" />
-    <ClCompile Include="..\..\Device53\src\libs\system_stm32f2xx.c">
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
-    </ClCompile>
-    <ClCompile Include="..\..\Device53\src\libs\usbd_cdc_interface.cpp" />
-    <ClCompile Include="..\..\Device53\src\libs\usbd_conf.cpp" />
-    <ClCompile Include="..\..\Device53\src\libs\usbd_desc.c">
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
-    </ClCompile>
-    <ClCompile Include="..\..\Device53\src\libs\usbh_conf.cpp" />
     <ClCompile Include="..\..\Device53\src\main.cpp" />
     <ClCompile Include="..\..\Device53\src\Menu\Pages\HelpContent.cpp" />
     <ClCompile Include="..\..\Device53\src\Menu\Pages\PageChannels.cpp" />
@@ -195,10 +200,6 @@
     <ClCompile Include="..\..\Device53\src\Menu\Pages\PageService.cpp" />
     <ClCompile Include="..\..\Device53\src\Menu\Pages\PageTime.cpp" />
     <ClCompile Include="..\..\Device53\src\Menu\Pages\PageTrig.cpp" />
-    <ClCompile Include="..\..\Device53\src\Panel\Panel.cpp" />
-    <ClCompile Include="..\..\Device53\src\Panel\PanelFunctions.cpp">
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
-    </ClCompile>
     <ClCompile Include="..\..\Device53\src\Settings\Settings.cpp" />
     <ClCompile Include="..\..\Device53\src\Settings\SettingsChannel.cpp" />
     <ClCompile Include="..\..\Device53\src\Settings\SettingsCursors.cpp" />
@@ -209,14 +210,6 @@
     <ClCompile Include="..\..\Device53\src\Settings\SettingsTime.cpp" />
     <ClCompile Include="..\..\Device53\src\Tables.cpp" />
     <ClCompile Include="..\..\Device53\src\Utils\ProcessingSignal.cpp" />
-    <ClCompile Include="..\..\Device53\src\VCP\VCP.cpp" />
-    <ClCompile Include="..\..\libs\common\VCP\SCPI\channelSCPI.cpp" />
-    <ClCompile Include="..\..\libs\common\VCP\SCPI\commonSCPI.cpp" />
-    <ClCompile Include="..\..\libs\common\VCP\SCPI\controlSCPI.cpp" />
-    <ClCompile Include="..\..\libs\common\VCP\SCPI\displaySCPI.cpp" />
-    <ClCompile Include="..\..\libs\common\VCP\SCPI\SCPI.cpp" />
-    <ClCompile Include="..\..\libs\common\VCP\SCPI\tbaseSCPI.cpp" />
-    <ClCompile Include="..\..\libs\common\VCP\SCPI\trigSCPI.cpp" />
     <ClCompile Include="..\..\libs\STM32Cube_F2\Drivers\STM32F2xx_HAL_Driver\Src\stm32f2xx_hal.c">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
     </ClCompile>
@@ -452,13 +445,22 @@
   <ItemGroup>
     <ClInclude Include="..\..\Device53\src\globals.h" />
     <ClInclude Include="..\..\Device53\src\Hardware\CPU.h" />
-    <ClInclude Include="..\..\Device53\src\libs\interrupts.h" />
+    <ClInclude Include="..\..\Device53\src\Hardware\Panel.h" />
+    <ClInclude Include="..\..\Device53\src\Hardware\VCP.h" />
+    <ClInclude Include="..\..\Device53\src\libs\FatFS\ffconf.h" />
+    <ClInclude Include="..\..\Device53\src\libs\HAL\stm32f2xx_hal_conf.h" />
+    <ClInclude Include="..\..\Device53\src\libs\LwIP\app_ethernet.h" />
+    <ClInclude Include="..\..\Device53\src\libs\LwIP\ethernetif.h" />
+    <ClInclude Include="..\..\Device53\src\libs\LwIP\lwipopts.h" />
+    <ClInclude Include="..\..\Device53\src\libs\USBD\usbd_cdc_interface.h" />
+    <ClInclude Include="..\..\Device53\src\libs\USBD\usbd_conf.h" />
+    <ClInclude Include="..\..\Device53\src\libs\USBD\usbd_desc.h" />
+    <ClInclude Include="..\..\Device53\src\libs\USBH\usbh_conf.h" />
     <ClInclude Include="..\..\Device53\src\Menu\Pages\PageChannels.h" />
     <ClInclude Include="..\..\Device53\src\Menu\Pages\PageDebug.h" />
     <ClInclude Include="..\..\Device53\src\Menu\Pages\PageTime.h" />
     <ClInclude Include="..\..\Device53\src\Menu\Pages\PageTrig.h" />
     <ClInclude Include="..\..\Device53\src\Utils\Dictionary.h" />
-    <ClInclude Include="..\..\libs\common\commonDefines.h" />
     <ClInclude Include="..\..\libs\common\Display\Colors.h" />
     <ClInclude Include="..\..\libs\common\Display\DisplayPrimitives.h" />
     <ClInclude Include="..\..\libs\common\Display\DisplayTypes.h" />
@@ -476,6 +478,9 @@
     <ClInclude Include="..\..\libs\common\Menu\MenuItemsDefs.h" />
     <ClInclude Include="..\..\libs\common\Menu\Pages\Definition.h" />
     <ClInclude Include="..\..\libs\common\S8-53\Hardware\Controls.h" />
+    <ClInclude Include="..\..\libs\common\SCPI\commonSCPI.h" />
+    <ClInclude Include="..\..\libs\common\SCPI\controlSCPI.h" />
+    <ClInclude Include="..\..\libs\common\SCPI\SCPI.h" />
     <ClInclude Include="..\..\libs\common\stub.h" />
     <ClInclude Include="..\..\libs\common\Utils\CommonFunctions.h" />
     <ClInclude Include="..\..\libs\common\Utils\Map.h" />
@@ -498,15 +503,6 @@
     <ClInclude Include="..\..\Device53\src\Hardware\FLASH.h" />
     <ClInclude Include="..\..\Device53\src\Hardware\FSMC.h" />
     <ClInclude Include="..\..\Device53\src\Hardware\Hardware.h" />
-    <ClInclude Include="..\..\Device53\src\libs\app_ethernet.h" />
-    <ClInclude Include="..\..\Device53\src\libs\ethernetif.h" />
-    <ClInclude Include="..\..\Device53\src\libs\ffconf.h" />
-    <ClInclude Include="..\..\Device53\src\libs\lwipopts.h" />
-    <ClInclude Include="..\..\Device53\src\libs\stm32f2xx_hal_conf.h" />
-    <ClInclude Include="..\..\Device53\src\libs\usbd_cdc_interface.h" />
-    <ClInclude Include="..\..\Device53\src\libs\usbd_conf.h" />
-    <ClInclude Include="..\..\Device53\src\libs\usbd_desc.h" />
-    <ClInclude Include="..\..\Device53\src\libs\usbh_conf.h" />
     <ClInclude Include="..\..\Device53\src\main.h" />
     <ClInclude Include="..\..\Device53\src\Menu\MenuPagesNames.h" />
     <ClInclude Include="..\..\Device53\src\Menu\Pages\HelpContent.h" />
@@ -515,7 +511,6 @@
     <ClInclude Include="..\..\Device53\src\Menu\Pages\PageDisplay.h" />
     <ClInclude Include="..\..\Device53\src\Menu\Pages\PageHelp.h" />
     <ClInclude Include="..\..\Device53\src\Menu\Pages\PageMemory.h" />
-    <ClInclude Include="..\..\Device53\src\Panel\Panel.h" />
     <ClInclude Include="..\..\Device53\src\Settings\Settings.h" />
     <ClInclude Include="..\..\Device53\src\Settings\SettingsChannel.h" />
     <ClInclude Include="..\..\Device53\src\Settings\SettingsCursors.h" />
@@ -530,10 +525,12 @@
     <ClInclude Include="..\..\Device53\src\Settings\SettingsTypes.h" />
     <ClInclude Include="..\..\Device53\src\Tables.h" />
     <ClInclude Include="..\..\Device53\src\Utils\ProcessingSignal.h" />
-    <ClInclude Include="..\..\Device53\src\VCP\VCP.h" />
-    <ClInclude Include="..\..\libs\common\VCP\SCPI\commonSCPI.h" />
-    <ClInclude Include="..\..\libs\common\VCP\SCPI\controlSCPI.h" />
-    <ClInclude Include="..\..\libs\common\VCP\SCPI\SCPI.h" />
+    <ClInclude Include="..\..\libs\common\_VS\cmsis_armcc.h" />
+    <ClInclude Include="..\..\libs\common\_VS\cmsis_armcc_V6.h" />
+    <ClInclude Include="..\..\libs\common\_VS\core_cm4.h" />
+    <ClInclude Include="..\..\libs\common\_VS\core_cmFunc.h" />
+    <ClInclude Include="..\..\libs\common\_VS\core_cmInstr.h" />
+    <ClInclude Include="..\..\libs\common\_VS\core_cmSimd.h" />
     <ClInclude Include="..\..\libs\common\_VS\ctype.h" />
     <ClInclude Include="..\..\libs\common\_VS\integer.h" />
     <ClInclude Include="..\..\libs\common\_VS\inttypes.h" />
@@ -695,11 +692,12 @@
     <None Include="..\..\Device53\src\Display\font\fontUGO2.inc" />
     <None Include="..\..\Device53\src\Display\font\fontUGO2display.inc" />
     <None Include="..\..\Device53\src\Display\font\fontUGOdisplay.inc" />
-    <None Include="..\..\Device53\src\libs\startup_stm32f207xx.s">
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
-    </None>
+    <None Include="..\..\Device53\src\libs\CMSIS\startup_stm32f207xx.s" />
     <None Include="..\..\Device53\src\main2.s" />
     <None Include="..\..\libs\common\_VS\algorithm" />
+    <None Include="..\..\libs\common\_VS\cstdlib" />
+    <None Include="..\..\libs\common\_VS\cstring" />
+    <None Include="..\..\libs\common\_VS\limits" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
