--- a/sources/Device53/Device53.uvprojx
+++ b/sources/Device53/Device53.uvprojx
@@ -5365,6 +5365,11 @@
               <FileType>5</FileType>
               <FilePath>..\libs\common\Hardware\stm32\207\stm207.h</FilePath>
             </File>
+            <File>
+              <FileName>stm32_it.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>..\libs\common\Hardware\stm32\stm32_it.cpp</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
