--- a/sources/_VS/Loader53/Loader53.vcxproj.filters
+++ b/sources/_VS/Loader53/Loader53.vcxproj.filters
@@ -201,6 +201,9 @@
     <ClCompile Include="..\..\libs\common\S8-53\Hardware\Controls.cpp">
       <Filter>Hardware</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\libs\common\Hardware\CPU_VCP.cpp">
+      <Filter>Hardware</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\libs\common\Utils\Math.h">
@@ -354,6 +357,9 @@
       <Filter>Hardware\stm32</Filter>
     </ClInclude>
     <ClInclude Include="..\..\libs\common\S8-53\Hardware\Controls.h">
+      <Filter>Hardware</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\libs\common\Hardware\CPU_VCP.h">
       <Filter>Hardware</Filter>
     </ClInclude>
   </ItemGroup>
