--- a/sources/Loader53/Loader53.uvprojx
+++ b/sources/Loader53/Loader53.uvprojx
@@ -2392,14 +2392,14 @@
               <FilePath>.\src\Hardware\CPU.h</FilePath>
             </File>
             <File>
-              <FileName>VCP.cpp</FileName>
+              <FileName>CPU_VCP.cpp</FileName>
               <FileType>8</FileType>
-              <FilePath>..\libs\common\Hardware\VCP.cpp</FilePath>
+              <FilePath>..\libs\common\Hardware\CPU_VCP.cpp</FilePath>
             </File>
             <File>
-              <FileName>VCP.h</FileName>
+              <FileName>CPU_VCP.h</FileName>
               <FileType>5</FileType>
-              <FilePath>..\libs\common\Hardware\VCP.h</FilePath>
+              <FilePath>..\libs\common\Hardware\CPU_VCP.h</FilePath>
             </File>
           </Files>
         </Group>
